# virocon

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .python-version  .readthedocs.yaml  .travis.yml  ISSUE_TEMPLATE.md  LICENSE  MANIFEST.in  PCA.py  README.md  README.rst  constructing_contours.html  contributionguide.html  definitions.html  description_cheat_sheet.html  detailed_examples.html  example.html  genindex.html  index.html  install.html  joint_models_estimating_parameters.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  reference.html  requirements.txt  search.html  searchindex.js  setup.py  user_guide.html  workflow.html
_modules/: index.html
_sources/: constructing_contours.rst.txt  contributionguide.rst.txt  detailed_examples.rst.txt  example.rst.txt  index.rst.txt  user_guide.rst.txt
api/: _n_sphere.html  contours.html  distributions.html  fitting.html  params.html
compute/: params.py
compute_docs/: contours.rst  make.bat
compute_tests/: test_contours.py  test_params.py
conda-recipe/: bld.bat  build.sh  meta.yaml
contour-coordinates/: doe_john_years_25_bottom.txt  doe_john_years_25_median.txt  doe_john_years_25_upper.txt  readme.md
datasets/: .gitignore  1year_dataset_A.txt  1year_dataset_D.txt  NREL_data_oneyear.csv  Readme.md  WES4_sample.csv  allyears_dataset_A.txt  coastDat2_oneyear.csv  ec-benchmark_dataset_A.txt  ec-benchmark_dataset_A_1year.txt  ec-benchmark_dataset_B.txt  ec-benchmark_dataset_B_1year.txt  ec-benchmark_dataset_C_1year.txt  ec-benchmark_dataset_D_1year.txt
dev-info/: README.md  conda_build_env.yml  (+4 more)
(+253 files in other folders)
