[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pytest.ini_options]
minversion = "6.0"
required_plugins = "pytest-cov"
addopts = "-ra --cov-config=.coveragerc --cov=virocon"
testpaths = [
    "tests",
]
